# Qwen3_14B_anamnesis_entry

./: .env.example  .gitignore  logServer.py  main.py  model_train.ipynb  pyproject.toml  upload.sh
assets/: mock_text.py  prompt.md  慢性病判别数据集.txt
servers/: ModelServer.py  PlaywrightServer.py
utils/: Create_model_client.py  PlayWright_Helper.py  logServer.py
