[project]
name = "qwen3-14b-anamnesis-entry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.86.0",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
